<resources>
    <string name="app_name">AccessoTech</string>
    <string name="mouse_with_shop_name">mouse with shop name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="looking_for_something_specific">Looking for something specific?</string>
    <string name="click_to_search">Click to Search</string>
    <string name="see_more">See more</string>
    <string name="search">Search</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="price_range">Price Range:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="dummy_description">Experience crystal-clear sound with these high-performance wireless earbuds. Designed for comfort and durability, they feature noise isolation, touch controls, and a sleek charging case that keeps you powered throughout the day. Perfect for music lovers, gamers, or anyone on the go.</string>
    <string name="quantity_in_stock">Quantity in stock:</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="card_number">Card number</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create account</string>
    <string name="price">Price:</string>
    <string name="item_is_added">Item is added</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="create_your_account">Create your Account</string>
    <string name="hello">Hello 👋</string>
    <string name="check_out_the_latest_updates_and_explore_something_new_today">Check out the latest updates and explore something new today!</string>
    <string name="apply_and_search">Apply and Search</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="description">Description</string>
    <string name="out_of_stock">[OUT OF STOCK]</string>
    <string name="no_results_found">No Results Found</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="not_available">Not Available</string>
</resources>