<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_inner_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtTxtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_light_grey_background"
            android:ems="10"
            android:hint="@string/enter_item_name"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/btnShowFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtSearch"
            tools:layout_editor_absoluteX="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="470dp">

                <Spinner
                    android:id="@+id/spinnerCategory"
                    style="@style/regular_grey_text"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerCompany"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinnerRating"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="261dp">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/regular_grey_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/price_range" />

                <EditText
                    android:id="@+id/edtTxtFromPrice"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_light_grey_background"
                    android:hint="@string/from"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/edtTxtToPrice"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_light_grey_background"
                    android:hint="@string/to"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:textAlignment="center" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFilteredItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/navbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnItemSearch" />

        <Button
            android:id="@+id/btnItemSearch"
            style="@style/coloured_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="searchForItemAndUpdateRecyclerView"
            android:text="@string/apply_and_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

        <ImageButton
            android:id="@+id/btnShowFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/edtTxtSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtTxtSearch"
            app:srcCompat="@drawable/filter_line" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/home_line" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/search_filled" />

            <ImageButton
                android:id="@+id/btnCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/cart_line" />

            <ImageButton
                android:id="@+id/btnProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/user_line" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>